force-app/main/default/objects/CP_Sub_Account__c/CP_Sub_Account__c.object-meta.xml
<CustomObject>
    <label>CP Sub-Account</label>
    <nameField>
        <label>CP Sub-Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Sub-Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>