force-app/main/default/objects/CP_Sub_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CP Sub-accounts</relationshipLabel>
    <relationshipName>CP_Sub_accounts</relationshipName>
    <type>Lookup</type>
</CustomField>