force-app/main/default/objects/CP_Sub_Account__c/fields/CP_Call_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>CP_Call_Next_Action_Date__c</fullName>
    <label>CP Call Next Action Date</label>
    <type>DateTime</type>
</CustomField>