force-app/main/default/objects/CP_Sub_Account__c/fields/CP_Meeting_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>CP_Meeting_Next_Action_Date__c</fullName>
    <label>CP Meeting Next Action Date</label>
    <type>DateTime</type>
</CustomField>