force-app/main/default/objects/CP_Sub_Account__c/fields/CP_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>CP_Sub_Stage__c</fullName>
    <label>CP Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CP_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Potential</fullName>
            </value>
            <value>
                <fullName>Low Potential</fullName>
            </value>
            <value>
                <fullName>Walkin Active</fullName>
            </value>
            <value>
                <fullName>Sourcing Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>