force-app/main/default/objects/CP_Sub_Account__c/fields/Last_CP_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Call_Date__c</fullName>
    <label>Last CP Call Date</label>
    <type>DateTime</type>
</CustomField>