force-app/main/default/objects/CP_Sub_Account__c/fields/Last_CP_Call_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Call_Remarks__c</fullName>
    <label>Last CP Call Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>