force-app/main/default/objects/CP_Sub_Account__c/fields/Last_CP_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Call_Status__c</fullName>
    <label>Last CP Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Completed</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Not Answering</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>