force-app/main/default/objects/CP_Sub_Account__c/fields/Last_CP_Call_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Call_Sub_Stage__c</fullName>
    <label>Last CP Call Sub-Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>