force-app/main/default/objects/CP_Sub_Account__c/fields/Last_CP_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Meeting_Status__c</fullName>
    <label>Last CP Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting Completed</fullName>
            </value>
            <value>
                <fullName>Meeting Cancelled</fullName>
            </value>
            <value>
                <fullName>Meeting Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>