force-app/main/default/objects/CP_Sub_Account__c/fields/Purpose_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Meeting__c</fullName>
    <label>Purpose of Meeting</label>
    <type>TextArea</type>
</CustomField>